# lecture-memory

./: .gitignore  CODEBASE_GUIDE.md  README.md  config.py  ingest.py  logger.py  main.py  models.py  pyproject.toml  requirements.txt  utils.py
evaluation/: eval.py
ingestion/: chunker.py  embed.py  transcribe.py
retrieval/: answer_generator.py  contradiction.py  graph.py  retriever.py
ui/: app.py
